--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-auth": "^1.4.2",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "lodash.debounce": "^4.0.8",
     "next": "16.0.3",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
@@ -21,6 +22,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/leaflet": "^1.9.21",
     "@types/leaflet-routing-machine": "^3.2.9",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
