zod package added

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "16.0.3",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
-    "react-leaflet": "5.0.0-rc.2"
+    "react-leaflet": "5.0.0-rc.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
