--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lodash.debounce": "^4.0.8",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.1.2",
     "next": "16.0.3",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
